Codeblock component with prism syntax highlighting

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,17 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-.code-block {
-  @apply text-base leading-tight text-black;
+.no-outline-text-area textarea {
+  outline: none;
 }
 
-.vscode {
-  font-family: "Fira Code", monospace;
-  font-size: 14px;
-  line-height: 1.5;
-  border: 1px solid #ccc;
-  padding: 10px;
-  width: 100%;
-  box-sizing: border-box;
-  border-radius: 4px;
+body {
+  @apply bg-gray-500;
 }
